# stabix

./: .env.production.example  .env.production.sin-dominio  .env.production.stabix-app  .gitignore  CALENDAR_SYSTEM.md  CHECKLIST.md  COMO_VER_FEATURES.md  Caddyfile  Caddyfile.sin-ssl  Caddyfile.stabix-app  DEPLOY.md  DEPLOY_COOLIFY.md  DEPLOY_RAPIDO.md  DEPLOY_SIN_DOMINIO.md  DOCKER_SETUP.md  Makefile  QUICK_START.md  README.md  comandos-utiles.sh  deploy-setup.sh  deploy-stabix-app.sh  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  seeds.md  setup-rapido.sh
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  app.json  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
backend/apps/appointments/: admin.py  apps.py  available_slots.py  models.py  serializers.py  urls.py  views.py
backend/apps/chat/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/apps/common/: exceptions.py  filters.py  models.py  pagination.py  utils.py
backend/apps/jobs/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
backend/apps/listings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/notifications/: admin.py  models.py  serializers.py  urls.py  (+2 more)
backend/docker/: api.Dockerfile  celery.Dockerfile  nginx.conf
backend/scripts/: seed_chile.py  seed_complete.py  seed_minimal.py
backend/stabix_backend/: asgi.py  celery_app.py  urls.py  wsgi.py
(+162 files in other folders)
